# auto-pydantic

./: .flake8  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/: release.yaml
.github/workflows/: python-test.yaml
example/: generator.ipynb  generator_model.ipynb
scripts/: setup_env.sh
src/crimson/auto_pydantic/: __init__.py  generator.py  generator_model.py  validator.py
src/crimson/auto_pydantic/beta/test_loader/: __init__.py
test/: example1.py  test_example1.py  test_generator.py  test_validator.py
