[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crimson-auto-pydantic"
version = "0.1.3"
description = "Template Tools"
readme = "README.md"
authors = [
  { name="Sisung Kim", email="sisung.kim1@gmail.com" },
]

classifiers = [
    "Programming Language :: Python :: 3",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic",
    "crimson-code-extractor",
    "crimson-ast-dev-tool",
    "inflection",
    "crimson-intelli-type"
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/crimson206/auto-pydantic"
"Bug Tracker" = "https://github.com/crimson206/auto-pydantic/issues"

[tool.black]
line-length = 120
