[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crimson-auto-pydantic"
version = "0.1.8"
description = "Automatic Pydantic model generation and validation for function parameters and return types."
readme = "README.md"
authors = [
  { name="Sisung Kim", email="sisung.kim1@gmail.com" },
]

classifiers = [
    "Development Status :: 4 - Beta",
  
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",

    "Intended Audience :: Developers",

    "Topic :: Software Development :: Libraries",

    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

    "Typing :: Typed",
]
dependencies = [
    "pydantic",
    "crimson-code-extractor",
    "crimson-ast-dev-tool",
    "inflection",
    "crimson-intelli-type",
    "crimson-file-loader"
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/crimson206/auto-pydantic"
"Bug Tracker" = "https://github.com/crimson206/auto-pydantic/issues"

[tool.black]
line-length = 120

[tool.setuptools]
include-package-data = true
